# BelarusianHybridParser

./: README.md  pyproject.toml  readme.md
evaluate_metrics/: test_accuracy.py
src/be_hybrid_parser/: __init__.py  core.py  helpers.py  morph.py
src/be_hybrid_parser.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/be_hybrid_parser/data/: ADJ_suff.json  ADP.json  ADV_stems.json  ADV_suff.json  AUX_forms.json  CCONJ.json  NOUN_suff.json  NUM.json  PART.json  PRON.json  SCONJ.json  VERB_PRED.json  VERB_suff.json
tests/: test_core.py
