[project]
name = "BelarusianHybridParser"
version = "1.0.2"
authors = [
  { name="EvViEgorov", email="egorovevgeniy7a@gmail.com" },
]
description = "A rule-based belarusian language parser with neural model hints feature"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "stanza>=1.11.1"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/EvViEgorov/BelarusianHybridParser"
Issues = "https://github.com/EvViEgorov/BelarusianHybridParser/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"be_hybrid_parser" = ["data/*"]